--- a/index.html
+++ b/index.html
@@ -1,13 +1,46 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Segunda Entrega</title>
+    <title>Proyecto N°2</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <header class="header">
+        <div class="container">
+            <h1>DakoPizza</h1>
+        </div>
+    </header>
+    <main class="main">
+        <section class="container">
+            <h2 class="titulo">Nuestras Pizzas</h2>
+            <div class="productos" id="productos">
+                <!-- Esto se va a rellenar con JS -->
+            </div>
+        </section>
+        <section class="container">
+            <h2 class="titulo">Carrito</h2>
+            <div class="carrito">
+                <div id="carrito-vacio">
+                    <h4>Tu carrito está vacío. 🙁</h4>
+                </div>
+                <div class="carrito-productos d-none" id="carrito-productos">
+                    <!-- Esto se va a rellenar con JS -->
+                </div>
+                <div class="carrito-total">
+                    <h2>Total: <span id="carrito-total">$0</span></h2>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer class="footer">
+        <div class="container">
+            <p>Desarrollo Web hecho por Mauro Colarte | © 2024</p>
+        </div>
+    </footer>
     
-
     <script src="./js/main.js"></script>
 </body>
 </html>
